--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Chrome Extension</title>
+    <title>fosbunny flop</title>
     <link rel="stylesheet" type="text/css" href="popup.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <h1>fosbunny flop</h1>
     <script src="popup.js"></script>
   </body>
 </html>
