Add and remove functionality

--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     <h1>fosbunny flop</h1>
+    <button id="add-site">Add to Paywalled Sites</button>
+    <ul id="paywalled-sites-list"></ul>
     <script src="popup.js"></script>
   </body>
 </html>
